fixed white space on the right of screen

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -6,8 +6,7 @@
 
 body,
 html {
-    width: 100%;
-    height: 100%;
+    overflow-x: hidden;
 }
 
 body,
@@ -47,9 +46,8 @@ h6 {
 
 #particles-js{
   position: absolute;
-  width: 100%;
+  max-width: 100%;
   height: 135%;
-  top: 1;
 }
 
 .intro-message > h1 {
@@ -120,28 +118,6 @@ h6 {
     float: left;
     width: 200px;
     border-top: 3px solid #66FF66;
-}
-
-.banner {
-    padding: 100px 0;
-    color: white;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
-    background-size: cover;
-}
-
-.banner h2 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 3em;
-}
-
-.banner ul {
-    margin-bottom: 0;
-}
-
-.banner-social-buttons {
-    float: right;
-    margin-top: 0;
 }
 
 @media(max-width:1199px) {
